--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "^1.3.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
@@ -17,5 +18,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage" : "http://jessieyang0320.github.io/music-player-react"
+  "homepage": "http://jessieyang0320.github.io/music-player-react"
 }
